plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'checkstyle'
    id 'idea'
}

checkstyle {
    configFile file("checkstyle.xml")
}

bootJar {
    archiveBaseName = 'ipa-api'
    archiveVersion = '0.1.0'
}

repositories {
    mavenCentral()
}

sourceCompatibility = 17
targetCompatibility = 17

// Ensure environment variables are passed along
test {
    dependsOn cleanTest
    testLogging.showStandardStreams = true
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-test")
    implementation("org.springframework.boot:spring-boot-starter-mail")
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation("org.springframework.ldap:spring-ldap-core:3.2.1")
    implementation("org.springframework.security:spring-security-cas:6.2.1")
    implementation("io.jsonwebtoken:jjwt-api:0.12.5")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.5")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.5")
    implementation("org.apache.poi:poi:5.2.5")
    implementation("org.apache.poi:poi-ooxml:5.2.5")
    implementation("jakarta.inject:jakarta.inject-api:2.0.1")
    implementation("ch.qos.logback:logback-core:1.4.14")
    implementation("ch.qos.logback:logback-classic:1.4.14")
    implementation("org.slf4j:slf4j-api:2.0.11")
    implementation("org.apache.commons:commons-lang3:3.14.0")
    implementation("org.flywaydb:flyway-core:9.22.3")
    implementation("org.flywaydb:flyway-mysql:9.22.3")
    implementation("org.apache.httpcomponents.client5:httpclient5:5.3.1")
    implementation("org.javers:javers-core:7.3.7")
    implementation("com.mysql:mysql-connector-j:8.3.0")
    implementation("com.amazonaws:aws-java-sdk-s3:1.12.651")
    implementation("software.amazon.awssdk:s3:2.25.7")

    testImplementation("junit:junit")
    testImplementation("com.h2database:h2:1.4.199")
    testImplementation("com.jayway.jsonpath:json-path:2.4.0")
}
